added overlays to images

--- a/client/comunidad.html
+++ b/client/comunidad.html
@@ -18,26 +18,117 @@
 
     <main>
       <section>
-        <a href="https://www.instagram.com/sirenuca_handmade/?utm_medium=copy_link" target="_blank"><img alt="up close pictures of lotion bottle label" src="/photos/sirenuca.png"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/lasdos1984/?utm_medium=copy_link" target="_blank"><img alt="small pile of gold rings with stones" src="/photos/lasdos.jpeg"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/intervenciondivina.km/?utm_medium=copy_link" target="_blank"><img alt="logo of a sun with a face" src="/photos/interdiv.jpeg"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/nerea__mx/?utm_medium=copy_link" target="_blank"><img alt="pictures of necklaces made of shells" src="/photos/nerea.jpeg"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/casaherminiamx/?utm_medium=copy_link" target="_blank"><img alt="clay pots of different colors" src="/photos/casahermania.jpeg"
-            width="300" height="300"></a>
-        <a href="https://instagram.com/comadritas.mx?utm_medium=copy_link" target="_blank"><img alt="various bottles of skincare products" src="/photos/comadritas.jpeg"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/rufinosmx/" target="_blank"><img alt="items for pets including leash and bandana" src="/photos/rufinos.jpeg"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/va.gaa/" target="_blank"><img alt="displays of various types of rings" src="/photos/va.gaa.png"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/vandanabandanas/" target="_blank"><img alt="various colorful bandanas" src="/photos/vandana.jpeg"
-            width="300" height="300"></a>
-        <a href="https://www.instagram.com/crunchypop.gym/" target="_blank"><img alt="bags of various snacks" src="/photos/crunchypop.jpeg"
-            width="300" height="300"></a>
+
+        <div class="brands">
+          <a href="https://www.instagram.com/sirenuca_handmade/?utm_medium=copy_link" target="_blank">
+            <img class="ig" alt="up close pictures of lotion bottle label" src="/photos/sirenuca.png">
+            <div class="overlay">
+              <div class="caption">Sirenuca</div>
+              <p class="handle">@sirenuca_handmade</p>
+              <p class="description">pócimas artesanales, health & beauty</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/lasdos1984/?utm_medium=copy_link" target="_blank">
+          <img class="ig" alt="small pile of gold rings with stones" src="/photos/lasdos.jpeg">
+          <div class="overlay">
+            <div class="caption">Las Dos</div>
+            <p class="handle">@lasdos1984</p>
+            <p class="description">objetos con buena onda</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/intervenciondivina.km/?utm_medium=copy_link" target="_blank">
+          <img class="ig" alt="logo of a sun with a face" src="/photos/interdiv.jpeg">
+          <div class="overlay">
+            <div class="caption">Intervencion Divina</div>
+            <p class="handle">@intervenciondivina.km</p>
+            <p class="description">lecturas de tarot, remedios mágicos, witchy art</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/nerea__mx/?utm_medium=copy_link" target="_blank">
+          <img class="ig" alt="pictures of necklaces made of shells" src="/photos/nerea.jpeg">
+          <div class="overlay">
+            <div class="caption">Nerea Accesorios</div>
+            <p class="handle">@nerea__mx</p>
+            <p class="description">accesorios de conchas naturales</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/casaherminiamx/?utm_medium=copy_link" target="_blank">
+          <img class="ig" alt="clay pots of different colors" src="/photos/casahermania.jpeg">
+          <div class="overlay">
+            <div class="caption">Casa Hermania</div>
+            <p class="handle">@casaherminiamx</p>
+            <p class="description">manos mexicanas con amor por la naturaleza</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://instagram.com/comadritas.mx?utm_medium=copy_link" target="_blank">
+          <img class="ig" alt="various bottles of skincare products" src="/photos/comadritas.jpeg">
+          <div class="overlay">
+            <div class="caption">Comadritas.mx</div>
+            <p class="handle">@comadritas.mx</p>
+            <p class="description">lo que necesitas para verte más bonita</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/rufinosmx/" target="_blank">
+          <img class="ig" alt="items for pets including leash and bandana" src="/photos/rufinos.jpeg">
+          <div class="overlay">
+            <div class="caption">Rufinos</div>
+            <p class="handle">@rufinosmx</p>
+            <p class="description">marca perruna</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/va.gaa/" target="_blank">
+          <img class="ig" alt="displays of various types of rings" src="/photos/va.gaa.png">
+          <div class="overlay">
+            <div class="caption">Va.ga</div>
+            <p class="handle">@va.gaa</p>
+            <p class="description">sunglasses/lentes</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/vandanabandanas/" target="_blank">
+          <img class="ig" alt="various colorful bandanas" src="/photos/vandana.jpeg">
+          <div class="overlay">
+            <div class="caption">Vandana</div>
+            <p class="handle">@vandanabandanas</p>
+            <p class="description">vandana cubrebocas con estilo</p>
+          </div>
+        </a>
+        </div>
+
+        <div class="brands">
+        <a href="https://www.instagram.com/crunchypop.gym/" target="_blank">
+          <img class="ig" alt="bags of various snacks" src="/photos/crunchypop.jpeg">
+          <div class="overlay">
+            <div class="caption">Crunchy Pop</div>
+            <p class="handle">@crunchypop.gym</p>
+            <p class="description">snacks</p>
+          </div>
+        </a>
+        </div>
+
       </section>
     </main>
     <script src="./node_modules/axios/dist/axios.min.js"></script>
