--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,10 @@
         <button type="button" id="subscribe">¡wuwuwuu!</button>
       </section>
 
-      <section></section>
+      <section>
+
+      </section>
+      
     </main>
     <footer></footer>
     <script src="../node_modules/axios/dist/axios.min.js"></script>
