--- a/client/comunidad.html
+++ b/client/comunidad.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <div id="navbar">
+      <a href="index.html">Colectivo Buena Onda</a>
       <a href="bakery.html">Buena Onda Bakery + Coffee</a>
       <a href="informacion.html">Información</a>
-      <a href="index.html">Colectivo Buena Onda</a>
       <a href="comunidad.html">Comunidad</a>
       <a href="calendario.html">Calendario</a>
     </div>
 
     <main>
-      <section>
+      <section class="gallery">
 
         <div class="brands">
           <a href="https://www.instagram.com/sirenuca_handmade/?utm_medium=copy_link" target="_blank">
